feat: create & query notion database
